# space_finder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile
i18n/en/: space_finder.ftl
i18n/pl/: space_finder.ftl
src/: app.rs  config.rs  lib.rs  localizer.rs  main.rs  model.rs  render.rs  scan.rs
tests/: scan_and_render.rs
ui/: main_window.slint
